# OST

./: CMakeLists.txt  README.md  commandlinemanager.cpp  commandlinemanager.h  frame.cpp  main.cpp  measurer.cpp  measurer.h  methodresolver.cpp  methodresolver.h  metric.pro
evaluator/: CMakeLists.txt  README.md  commandlinemanager.cpp  main.cpp  measurer.cpp  pathmanager.cpp
evaluator-python/: evaluator.py  metrics.py
examples/: README.md
examples/half-same-data/: script-half-same-data-bhi.sh  script-half-same-data.sh
examples/non-match-data/: script-non-match-data-bhi.sh  script-non-match-data-cus.sh
examples/same-data/: script-same-data-bhi.sh  script-same-data-cus.sh  script-same-data.sh
examples/usual-example/: script-usual-example-bhi.sh  script-usual-example-cus.sh  script-usual-example.sh
examples/usual-example-double-zone/: script-usual-example-double-zone.sh
examples/usual-example-double-zone-2/: script-usual-example-double-zone-2.sh
examples/usual-example-double-zone-3/: script-usual-example-double-zone-3.sh
published_results/: README.md
published_results/DT/: v22.csv  v23.csv  v24.csv  v25.csv  v26.csv  v27.csv  v28.csv  v29.csv  v30.csv  v31.csv  v32.csv  v33.csv  v34.csv  v35.csv  v36.csv  v37.csv  v38.csv  v39.csv  v40.csv  v41.csv  v42.csv  v43.csv  (+27 more)
python/: metrics.py  requirements.txt
scripts/: clean.sh  run_bhi.sh  run_lfovs_bhi.sh  run_multiple_tests.sh
src/: commandlinemanager.h  frame.h  measurer.cpp  methodresolver.cpp  methodresolver.h  pathmanager.cpp  pathmanager.h
tools/: README.md
user_summaries/: README.md
(+456 files in other folders)
